# desktop-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  setup.py
api/: app.py
app/: exceptions.py  logging.py  main.py
app/api/: auth.py  create_app.py  proc_app.py  router.py
app/api/routes/: jobs.py
app/config/: api.py  config.py  db.py  o365.py  sap.py  utils.py  wmill.py  worker.py
app/email/: mailbox.py  monitor.py  templates.py  wmill_client.py
app/models/: __init__.py
app/sap_gui/: __init__.py
app/worker/: core.py
app/worker/tasks/: __init__.py
app/worker/tasks/sap/: __init__.py  create_sales_orders.py
app/worker/tasks/sap/mappings/: __init__.py  va01_mappings.py
scripts/: defer_job.py  monitor.py  start_worker.py
settings/: __init__.py  api.py  config.py  db.py  sap.py  worker.py
src/: logger.py
src/desktop_agent/: main.py  monitor_emails.py
src/desktop_agent/api/: app.py  utils.py
src/desktop_agent/api/routes/: __init__.py  jobs.py
src/desktop_agent/models/: __init__.py  attachment.py  job_result.py
src/desktop_agent/services/: windmill.py
src/desktop_agent/services/o365/: __init__.py  account.py  mailbox.py
src/desktop_agent/settings/: __init__.py  api.py  config.py  constants.py  db.py  o365.py  sap.py  wmill.py  worker.py
src/desktop_agent/worker/: core.py  defer.py  worker.py
src/desktop_agent/worker/tasks/: __init__.py
src/desktop_agent/worker/tasks/sap/: __init__.py  create_sales_orders.py  sap_mappings.py  sap_screen_order.py  va01_mappings.py
src/desktop_agent/worker/tasks/sap/mappings/: __init__.py  sap_mappings.py  va01_mappings.py
