[project]
name = "desktop-agent"
version = "0.1.0"
description = "A desktop worker agent to execute tasks that require a GUI "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.120.1",
    "fastexcel>=0.16.0",
    "keyring>=25.6.0",
    "loguru>=0.7.3",
    "polars>=1.34.0",
    "procrastinate>=3.5.3",
    "psycopg[binary]>=3.2.12",
    "pydantic-settings>=2.11.0",
    "pywin32>=311",
    "pywinauto>=0.6.9",
    "rpa-toolkit>=0.1.1",
    "sap-gui-engine>=0.1.1a5",
    "scalar-fastapi>=1.4.3",
    "tenacity>=9.1.2",
]

[project.scripts]
api = "desktop_agent.main:main"
worker = "desktop_agent.worker.worker:run_worker"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
